--- a/src/app/pages/presentacion/presentacion.component.html
+++ b/src/app/pages/presentacion/presentacion.component.html
@@ -43,7 +43,7 @@
     </div>
 
     <div class="col-md-6 p-0 d-flex justify-content-center align-items-center">
-      <img data-aos="zoom-in" data-aos-delay="1600" data-aos-duration="1000" data-aos-easing="ease-out" src="/img/prueba-img.png" alt="Imagen" class="img-fluid imagen-reducida">
+      <img data-aos="zoom-in" data-aos-delay="1600" data-aos-duration="1000" data-aos-easing="ease-out" src="/assets/img/prueba-img.png" alt="Imagen" class="img-fluid imagen-reducida">
     </div>
   </div>
 </div>
