--- a/src/app/pages/presentacion/presentacion.component.html
+++ b/src/app/pages/presentacion/presentacion.component.html
@@ -5,9 +5,11 @@
         Hola, mi nombre es
       </p>
 
-      <h2 data-aos="fade-right" data-aos-delay="1600" data-aos-duration="1500" data-aos-easing="ease-out" class="text-2">
-        Abner <span class="texto-5 p-3">Gomez</span>
-      </h2>
+    <h2 data-aos="fade-right" data-aos-delay="1600" data-aos-duration="1500" data-aos-easing="ease-out" class="text-2">
+      <span id="escritura"></span><span id="cian-texto" class="texto-5"></span><span id="cursor">|</span>
+    </h2>
+
+
 
       <p data-aos="fade-up" data-aos-delay="1400" data-aos-duration="1000" data-aos-easing="ease-out" class="text-1">
         Soy un <span class="texto-5">Desarrollador Web</span>.
